src/main/resources/static/css/style.css
/* ... */
@media screen and (max-width: 953px){
    .main-body{
        padding-top: 7em;
    }
}

@media screen and (max-width: 766px){
    #header-scroll-btn{
        padding-right: 0;
    }
    .main-body{
        padding-top: 5em;
    }
    .post iframe{
        height: 12em;
    }
    .btn-primary, .btn-dark, .btn-default {
        font-size: 1em;
    }
    .navbar-nav li a{
        border-radius: 0 !important;
        -webkit-border-radius: 0 !important;
        -moz-border-radius: 0 !important;
    }
    .dropdown-menu{
        background-color: #e7e7e7 !important;
    }
    .dropdown-item{
        text-align: center;
    }
    .contact-info{
        height: auto;
    }
    .contact-info div{
        display: block;
        float: none !important;
        width: 100%;
    }
    .inline-box{
        text-align: center;
        height: auto;
        margin: 0;
        width: 100%;
    }
    .nav-boxes{
        padding-top: 1.1em;
    }
    .nav-boxes .col h3{
        height: auto;
    }
    .nav-boxes img{
        width: 65%;
    }
    .nav-boxes article{
        height: 18em;
    }
    .site-branding img{
        width: 100%;
    }
    .page-body img{
        width: 100%;
    }
    .page-item div{
        display: block;
        font-size: 1em;
        float: none;
        width: 100%;
    }
    .info-boxes article{
        margin-bottom: 1.5em;
        padding-right: 6em;
        padding-left: 6em;
    }
    .info-boxes div{
        height: auto;
    }
    .social-icon{
        font-size: 9em;
    }
    .info-boxes article section{
        text-align: center;
    }
    #email-link{
        font-size: 1em;
    }
    .table-two-col tr td{
        display: block;
    }
    .alert {
        text-align: center;
    }
    .right-except-mobile{
        float: none;
    }
    .left-except-mobile{
        float:none;
    }
    .info-boxes ul li a {
        text-align: center;
    }
    .info-boxes ul li a > *{  /* All child elements stop floating */
        float: none;
    }
}

@media screen and (max-width: 618px) {
    #header-upper-row{
        padding-bottom: 8em;
    }
    .header-wrapper img.width-40{
        width: 90%;
    }
    .header-wrapper img.width-20{
        width: 42%;
    }
    .nav-boxes article{
        height: 15em;
    }
    .info-boxes article{
        padding-right: 4em;
        padding-left: 4em;
    }
    #email-link{
        font-size: 0.8em;
    }
}

@media screen and (max-width: 399px) {
    .post iframe{
        height: 15em;
    }
}

